--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chrome-launcher": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cron": "^3.1.6",
     "date-fns": "^4.1.0",
     "lighthouse": "^12.3.0",
     "lucide-react": "^0.475.0",
@@ -35,14 +36,15 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1",
-    "cron": "^3.1.6"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "9.20.1",
+    "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
